--- a/index.htm
+++ b/index.htm
@@ -138,7 +138,7 @@ and Social Media services in Lagos, Rwanda. ">
                                         <a href="index.html">Home</a>
                                                                             </li>
                                     <li>
-                                        <a href='javascript:void(0)'>Services</a>
+                                        <a href='service.html'>Services</a>
                                         
                                     </li>
                                     <li>
@@ -272,9 +272,9 @@ and Social Media services in Lagos, Rwanda. ">
                                 <img src="icon/icon-1.gif" alt="icon">
                             </div>
                             <div class="content">
-                                <h5 class="title"> <a href='javascript:void(0)'>Event Security Services</a></h5>
+                                <h5 class="title"> <a href='service.html'>Event Security Services</a></h5>
                                 <p>We specialize in managing large-scale events, ensuring crowds are safe, organized, and well-protected, so every moment runs smoothly.</p>
-                                <a class='more-btn' href='javascript:void(0)'>Find out more</a>
+                                <a class='more-btn' href='service.html'>Find out more</a>
                             </div>
                         </div>
                     </div>
@@ -284,9 +284,9 @@ and Social Media services in Lagos, Rwanda. ">
                                 <img src="icon/icon-2.gif" alt="icon">
                             </div>
                             <div class="content">
-                                <h5 class="title"> <a href='javascript:void(0)'>Professional Bouncers</a></h5>
+                                <h5 class="title"> <a href='service.html'>Professional Bouncers</a></h5>
                                 <p>Our skilled bouncers maintain order and enforce venue rules while creating a safe, welcoming environment for all.</p>
-                                <a class='more-btn' href='javascript:void(0)'>Find out more</a>
+                                <a class='more-btn' href='service.html'>Find out more</a>
                             </div>
                         </div>
                     </div>
@@ -296,10 +296,10 @@ and Social Media services in Lagos, Rwanda. ">
                                 <img src="icon/icon-3.gif" alt="icon">
                             </div>
                             <div class="content">
-                                <h5 class="title"> <a href='javascript:void(0)'>Ushering & Liaison Services</a></h5>
+                                <h5 class="title"> <a href='service.html'>Ushering & Liaison Services</a></h5>
                                 <p>Friendly, professional ushers guide guests and connect organizers with seamless event coordination.
                                 </p>
-                                <a class='more-btn' href='javascript:void(0)'>Find out more</a>
+                                <a class='more-btn' href='service.html'>Find out more</a>
                             </div>
                         </div>
                     </div>
@@ -309,10 +309,10 @@ and Social Media services in Lagos, Rwanda. ">
                                 <img src="icon/icon-4.gif" alt="icon">
                             </div>
                             <div class="content">
-                                <h5 class="title"> <a href='javascript:void(0)'>Protocol & Guide Services</a></h5>
+                                <h5 class="title"> <a href='service.html'>Protocol & Guide Services</a></h5>
                                 <p>We expertly manage VIPs and dignitaries, ensuring strict protocol adherence and flawless execution.
                                 </p>
-                                <a class='more-btn' href='javascript:void(0)'>Find out more</a>
+                                <a class='more-btn' href='service.html'>Find out more</a>
                             </div>
                         </div>
                     </div>
@@ -322,10 +322,10 @@ and Social Media services in Lagos, Rwanda. ">
                                 <img src="icon/icon-5.gif" alt="icon">
                             </div>
                             <div class="content">
-                                <h5 class="title"> <a href='javascript:void(0)'>Corporate and Private Security</a></h5>
+                                <h5 class="title"> <a href='service.html'>Corporate and Private Security</a></h5>
                                 <p>Tailored security solutions designed to safeguard exclusive events, business meetings, and private gatherings.
                                 </p>
-                                <a class='more-btn' href='javascript:void(0)'>Find out more</a>
+                                <a class='more-btn' href='service.html'>Find out more</a>
                             </div>
                         </div>
                     </div>
@@ -335,10 +335,10 @@ and Social Media services in Lagos, Rwanda. ">
                                 <img src="icon/icon-6.gif" alt="icon">
                             </div>
                             <div class="content">
-                                <h5 class="title"> <a href='javascript:void(0)'>Emergency Response Teams</a></h5>
+                                <h5 class="title"> <a href='service.html'>Emergency Response Teams</a></h5>
                                 <p>Rapid and trained response teams to handle unexpected incidents, ensuring safety and minimizing disruptions.
                                 </p>
-                                <a class='more-btn' href='javascript:void(0)'>Find out more</a>
+                                <a class='more-btn' href='service.html'>Find out more</a>
                             </div>
                         </div>
                     </div>
@@ -972,8 +972,8 @@ and Social Media services in Lagos, Rwanda. ">
                             <li><a href="https://rw.linkedin.com/company/Crowd Minders?trk=public_post_feed-actor-name" data-sal="slide-up" data-sal-duration="500" data-sal-delay="400"><i class="fab fa-linkedin-in"></i></a></li>
                            <li><a href="https://facebook.com/Crowd Minders_agency/" data-sal="slide-up" data-sal-duration="500" data-sal-delay="100"><i class="fab fa-facebook-f"></i></a></li>
                             <li><a href="https://www.instagram.com/Crowd Minders" data-sal="slide-up" data-sal-duration="500" data-sal-delay="500"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="javascript:void(0)" data-sal="slide-up" data-sal-duration="500" data-sal-delay="200"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="javascript:void(0)" data-sal="slide-up" data-sal-duration="500" data-sal-delay="300"><i class="fab fa-pinterest-p"></i></a></li>
+                            <!-- <li><a href="javascript:void(0)" data-sal="slide-up" data-sal-duration="500" data-sal-delay="200"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="javascript:void(0)" data-sal="slide-up" data-sal-duration="500" data-sal-delay="300"><i class="fab fa-pinterest-p"></i></a></li> -->
                         </ul>
                     </div>
                 </div>
@@ -1000,12 +1000,12 @@ and Social Media services in Lagos, Rwanda. ">
                                         <h6 class="widget-title">Services</h6>
                                         <div class="footer-menu-link">
                                             <ul class="list-unstyled">
-                                                <li><a href='javascript:void(0)'>Event Security Services</a></li>
-                                                <li><a href='javascript:void(0)'>Professional Bouncers</a></li>
-                                                <li><a href='javascript:void(0)'>Ushering & Liaison Services</a></li>
-                                                <li><a href='javascript:void(0)'>Protocol & Guide Services </a></li>
-                                                <li><a href='javascript:void(0)'>Corporate and Private Security</a></li>
-                                                <li><a href='javascript:void(0)'>Emergency Response Teams</a></li>
+                                                <li><a href='service.html'>Event Security Services</a></li>
+                                                <li><a href='service.html'>Professional Bouncers</a></li>
+                                                <li><a href='service.html'>Ushering & Liaison Services</a></li>
+                                                <li><a href='service.html'>Protocol & Guide Services </a></li>
+                                                <li><a href='service.html'>Corporate and Private Security</a></li>
+                                                <li><a href='service.html'>Emergency Response Teams</a></li>
                                             </ul>
                                         </div>
                                     </div>
