--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -15,7 +15,7 @@
     <!-- Meta Data -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Portfolio |IzubaGen | Web Design Agency in Rwanda</title>
+    <title>Crowd Minders | Security and Protocole in Rwanda</title>
     <meta name="description" content="Our portfolio of recent and featured works including 
     Web designs, Logo and Branding.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
