--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <!-- Meta Data -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Contact Us | IzubaGen | Web Design Agency in Rwanda</title>
+    <title>Contact Us |Crowd Minders | Security and Protocole in Rwanda</title>
     <meta name="description" content="Get in touch with us for more information about our services.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
