--- a/pricing-table.html
+++ b/pricing-table.html
@@ -15,7 +15,7 @@
     <!-- Meta Data -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Pricing | IzubaGen | Web Design Agency in Rwanda</title>
+    <title>Crowd Minders | Security and Protocole in Rwanda</title>
     <meta name="description" content="Check out our affordable pricing rates.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
