updating new thing

--- a/index.html
+++ b/index.html
@@ -875,6 +875,16 @@ and Social Media services in Kigali, Rwanda. ">
                     </div>
                     <div class="col-lg-3 col-6" data-sal="slide-up" data-sal-duration="500" data-sal-delay="100">
                         <div class="brand-grid">
+                            <img src="brand/BAL_Logo.png" alt="Brand" style="height: 180px;">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-6" data-sal="slide-up" data-sal-duration="500" data-sal-delay="100">
+                        <div class="brand-grid">
+                            <img src="brand/Woman_D.png" alt="Brand">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-6" data-sal="slide-up" data-sal-duration="500" data-sal-delay="100">
+                        <div class="brand-grid">
                             <img src="brand/1.png" alt="Brand">
                         </div>
                     </div>
@@ -908,7 +918,7 @@ and Social Media services in Kigali, Rwanda. ">
                             <img src="brand/calan.png" alt="Brand">
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
             <ul class="list-unstyled shape-group-10">
                 <li class="shape shape-1"><img src="others/line-9.png" alt="Circle"></li>
@@ -1027,7 +1037,7 @@ and Social Media services in Kigali, Rwanda. ">
                                         <h6 class="widget-title">Support</h6>
                                         <div class="footer-menu-link">
                                             <ul class="list-unstyled">
-                                                <li><a href='javascript:void(0)'>Contact</a></li>
+                                                <li><a href='contact.html'>Contact</a></li>
                                                 <li><a href="javascript:void(0)">Privacy Policy</a></li>
                                                 <li><a href="javascript:void(0)">Terms of Use</a></li>
                                             </ul>
