--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -421,51 +421,51 @@
                                         <small>Slide >>> </small>
                                         </div>
                                         <div class="page">
-                                        <img src="images/Crowd-minders-Pictures/054A7562.jpg" alt="Charmandar" />
+                                        <img src="images/Crowd-minders-Pictures/E15A1697_1.jpg" alt="Charmandar" />
                                         <small>Charmandar</small>
                                         </div>
                                         <div class="page">
-                                        <img src="images/Crowd-minders-Pictures/054A7564.jpg" alt="Arbok" />
+                                        <img src="images/Crowd-minders-Pictures/E15A1505.jpg" alt="Arbok" />
                                         <small>Arbok</small>
                                         </div>
                                         <div class="page">
-                                        <img src="images/Crowd-minders-Pictures/054A7572.jpg" alt="Pikachu" />
+                                        <img src="images/Crowd-minders-Pictures/E15A8863.jpg" alt="Pikachu" />
                                         <small>Pikachu</small>
                                         </div>
                                         <div class="page">
-                                        <img src="images/img-4.png" alt="Mew" />
+                                        <img src="images/Crowd-minders-Pictures/054A7575.jpg" alt="Mew" />
                                         <small>Mew</small>
                                         </div>
                                         <div class="page">
-                                        <img src="images/img-4.png" alt="Mew" />
+                                        <img src="images/Crowd-minders-Pictures/73f7d602086d4d0082fddf21e0c2730f.jpg" alt="Mew" />
                                         <small>Mew</small>
                                         </div>
                                         <div class="page">
-                                        <img src="images/img-4.png" alt="Mew" />
+                                        <img src="images/Crowd-minders-Pictures/E15A1494.jpg" alt="Mew" />
                                         <small>Mew</small>
                                         </div>
                                         <div class="page">
-                                        <img src="images/img-4.png" alt="Mew" />
+                                        <img src="images/Crowd-minders-Pictures/E15A1505.jpg" alt="Mew" />
                                         <small>Mew</small>
                                         </div>
                                         <div class="page">
-                                        <img src="images/img-4.png" alt="Mew" />
+                                        <img src="images/Crowd-minders-Pictures/A11A0122.jpg" alt="Mew" />
                                         <small>Mew</small>
                                         </div>
                                         <div class="page">
-                                        <img src="images/img-4.png" alt="Mew" />
+                                        <img src="images/Crowd-minders-Pictures/CrowdMinders.jpg" alt="Mew" />
                                         <small>Mew</small>
                                         </div>
                                         <div class="page">
-                                        <img src="images/img-4.png" alt="Mew" />
+                                        <img src="images/Crowd-minders-Pictures/3b5662cf841245c29aac269e18ad96f8.jpg" alt="Mew" />
                                         <small>Mew</small>
                                         </div>
                                         <div class="page">
-                                        <img src="images/img-5.png" alt="Darkrai" />
+                                        <img src="images/Crowd-minders-Pictures/CrowdMinders.jpg" alt="Darkrai" />
                                         <small>Darkrai</small>
                                         </div>
                                         <div class="hard"></div>
-                                        <div class="hard">Thank You <small>~ HankTheTank</small></div>
+                                        <div class="hard">Thank You <small>~ Crowd-minders</small></div>
                                     </div>
                                     </section>
 
