change portifolio to showcase

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ and Social Media services in Kigali, Rwanda. ">
                                         
                                     </li>
                                     <li>
-                                        <a href='portfolio-2.html'>Portfolio</a>
+                                        <a href='portfolio-2.html'>Showcase</a>
                                     </li>
                                     <li class="menu-item-has-children">
                                         <a href="javascript:void(0)">Pages</a>
@@ -1027,7 +1027,7 @@ and Social Media services in Kigali, Rwanda. ">
                                             <ul class="list-unstyled">
                                                 <li><a href="javascript:void(0)">Blog</a></li>
                                                 <li><a href="javascript:void(0)">Case Studies</a></li>
-                                                <li><a href='javascript:void(0)'>Portfolio</a></li>
+                                                <li><a href='javascript:void(0)'>Showcase</a></li>
                                             </ul>
                                         </div>
                                     </div>
