--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -131,7 +131,7 @@
                                         
                                     </li>
                                     <li>
-                                        <a href='portfolio-2.html'>Portfolio</a>
+                                        <a href='portfolio-2.html'>Showcase</a>
                                     </li>
                                     <li class="menu-item-has-children">
                                         <a href="javascript:void(0);">Pages</a>
@@ -216,7 +216,7 @@
             <div class="container">
                 <div class="section-heading heading-left">
                     <span class="subtitle">Our Project</span>
-                    <h2 class="title">Explore the amazing projects in our portfolio where quality and creativity collide. Working on one project at a time, we are here to realize your goals!
+                    <h2 class="title">Explore the amazing projects in our Showcase where quality and creativity collide. Working on one project at a time, we are here to realize your goals!
                     </h2>
                 </div>
                 <div class="axil-isotope-wrapper">
@@ -228,7 +228,7 @@
                                 <div class="row"> 
                                     <div class="col-lg-12 text-center">
                                         
-                                        <h2 class="section-subheading text-muted">_____Portfolios_____</h2>
+                                        <h2 class="section-subheading text-muted">_____Showcases_____</h2>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -993,12 +993,12 @@
                                         <h6 class="widget-title">Services</h6>
                                         <div class="footer-menu-link">
                                             <ul class="list-unstyled">
-                                                <li><a href='service.html'>Logo &amp; Branding</a></li>
-                                                <li><a href='service.html'>Website Development</a></li>
-                                                <li><a href='service.html'>Mobile App Development</a></li>
-                                                <li><a href='service.html'>Search Engine Optimization</a></li>
-                                                <li><a href='service.html'>Pay-Per-Click</a></li>
-                                                <li><a href='service.html'>Social Media Marketing</a></li>
+                                                <li><a href="service.html#secstion1"'>Event Security Services</a></li>
+                                                <li><a href="#section2">Professional Bouncers</a></li>
+                                                <li><a href="#section3">Ushering & Liaison Services</a></li>
+                                                <li><a href="#section4">Protocol & Guide Services </a></li>
+                                                <li><a href="#section5">Corporate and Private Security</a></li>
+                                                <li><a href="#section6">Emergency Response Teams</a></li>
                                             </ul>
                                         </div>
                                     </div>
