--- a/service.html
+++ b/service.html
@@ -107,7 +107,7 @@
                                         
                                     </li>
                                     <li>
-                                        <a href='portfolio-2.html'>Portfolio</a>
+                                        <a href='portfolio-2.html'>Showcase</a>
                                     </li>
                                     <li class="menu-item-has-children">
                                         <a href="javascript:void(0)">Pages</a>
@@ -663,7 +663,7 @@
                                             <ul class="list-unstyled">
                                                 <li><a href="javascript:void(0)">Blog</a></li>
                                                 <li><a href="#">Case Studies</a></li>
-                                                <li><a href='portfolio-2.html'>Portfolio</a></li>
+                                                <li><a href='portfolio-2.html'>Showcase</a></li>
                                             </ul>
                                         </div>
                                     </div>
