changing foooter and heading even links as well for pages

--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -993,12 +993,12 @@
                                         <h6 class="widget-title">Services</h6>
                                         <div class="footer-menu-link">
                                             <ul class="list-unstyled">
-                                                <li><a href="service.html#secstion1"'>Event Security Services</a></li>
-                                                <li><a href="#section2">Professional Bouncers</a></li>
-                                                <li><a href="#section3">Ushering & Liaison Services</a></li>
-                                                <li><a href="#section4">Protocol & Guide Services </a></li>
-                                                <li><a href="#section5">Corporate and Private Security</a></li>
-                                                <li><a href="#section6">Emergency Response Teams</a></li>
+                                                <li><a href="service.html#secstion1">Event Security Services</a></li>
+                                                <li><a href="service.html#section2">Professional Bouncers</a></li>
+                                                <li><a href="service.html#section3">Ushering & Liaison Services</a></li>
+                                                <li><a href="service.html#section4">Protocol & Guide Services </a></li>
+                                                <li><a href="service.html#section5">Corporate and Private Security</a></li>
+                                                <li><a href="service.html#section6">Emergency Response Teams</a></li>
                                             </ul>
                                         </div>
                                     </div>
