--- a/contact.html
+++ b/contact.html
@@ -293,12 +293,12 @@
                                         <h6 class="widget-title">Services</h6>
                                         <div class="footer-menu-link">
                                             <ul class="list-unstyled">
-                                                <li><a href='service.html'>Logo &amp; Branding</a></li>
-                                                <li><a href='service.html'>Website Development</a></li>
-                                                <li><a href='service.html'>Mobile App Development</a></li>
-                                                <li><a href='service.html'>Search Engine Optimization</a></li>
-                                                <li><a href='service.html'>Pay-Per-Click</a></li>
-                                                <li><a href='service.html'>Social Media Marketing</a></li>
+                                                <li><a href="service.html#secstion1">Event Security Services</a></li>
+                                                <li><a href="service.html#section2">Professional Bouncers</a></li>
+                                                <li><a href="service.html#section3">Ushering & Liaison Services</a></li>
+                                                <li><a href="service.html#section4">Protocol & Guide Services </a></li>
+                                                <li><a href="service.html#section5">Corporate and Private Security</a></li>
+                                                <li><a href="service.html#section6">Emergency Response Teams</a></li>
                                             </ul>
                                         </div>
                                     </div>
