--- a/index.htm
+++ b/index.htm
@@ -142,7 +142,7 @@ and Social Media services in Kigali, Rwanda. ">
                                         
                                     </li>
                                     <li>
-                                        <a href='portfolio-2.html'>Portfolio</a>
+                                        <a href='portfolio-2.html'>Showcase</a>
                                     </li>
                                     <li class="menu-item-has-children">
                                         <a href="javascript:void(0)">Pages</a>
@@ -1010,12 +1010,12 @@ and Social Media services in Kigali, Rwanda. ">
                                         <h6 class="widget-title">Services</h6>
                                         <div class="footer-menu-link">
                                             <ul class="list-unstyled">
-                                                <li><a href='service.html'>Event Security Services</a></li>
-                                                <li><a href='service.html'>Professional Bouncers</a></li>
-                                                <li><a href='service.html'>Ushering & Liaison Services</a></li>
-                                                <li><a href='service.html'>Protocol & Guide Services </a></li>
-                                                <li><a href='service.html'>Corporate and Private Security</a></li>
-                                                <li><a href='service.html'>Emergency Response Teams</a></li>
+                                                <li><a href="service.html#secstion1">Event Security Services</a></li>
+                                                <li><a href="service.html#section2">Professional Bouncers</a></li>
+                                                <li><a href="service.html#section3">Ushering & Liaison Services</a></li>
+                                                <li><a href="service.html#section4">Protocol & Guide Services </a></li>
+                                                <li><a href="service.html#section5">Corporate and Private Security</a></li>
+                                                <li><a href="service.html#section6">Emergency Response Teams</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -1027,7 +1027,7 @@ and Social Media services in Kigali, Rwanda. ">
                                             <ul class="list-unstyled">
                                                 <li><a href="javascript:void(0)">Blog</a></li>
                                                 <li><a href="javascript:void(0)">Case Studies</a></li>
-                                                <li><a href='javascript:void(0)'>Portfolio</a></li>
+                                                <li><a href='javascript:void(0)'>Showcase</a></li>
                                             </ul>
                                         </div>
                                     </div>
