--- a/index.html
+++ b/index.html
@@ -1010,12 +1010,12 @@ and Social Media services in Kigali, Rwanda. ">
                                         <h6 class="widget-title">Services</h6>
                                         <div class="footer-menu-link">
                                             <ul class="list-unstyled">
-                                                <li><a href='service.html'>Event Security Services</a></li>
-                                                <li><a href='service.html'>Professional Bouncers</a></li>
-                                                <li><a href='service.html'>Ushering & Liaison Services</a></li>
-                                                <li><a href='service.html'>Protocol & Guide Services </a></li>
-                                                <li><a href='service.html'>Corporate and Private Security</a></li>
-                                                <li><a href='service.html'>Emergency Response Teams</a></li>
+                                                <li><a href="service.html#secstion1">Event Security Services</a></li>
+                                                <li><a href="service.html#section2">Professional Bouncers</a></li>
+                                                <li><a href="service.html#section3">Ushering & Liaison Services</a></li>
+                                                <li><a href="service.html#section4">Protocol & Guide Services </a></li>
+                                                <li><a href="service.html#section5">Corporate and Private Security</a></li>
+                                                <li><a href="service.html#section6">Emergency Response Teams</a></li>
                                             </ul>
                                         </div>
                                     </div>
