--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -190,8 +190,8 @@
         <div class="breadcrum-area breadcrumb-banner">
             <div class="container">
                 <div class="section-heading heading-left" data-sal="slide-right" data-sal-duration="1000" data-sal-delay="300">
-                    <h1 class="title h2">Our projects</h1>
-                    <p>A quick view of industry specific problems solved with design by the awesome team at IzubaGen.</p>
+                    <h1 class="title h2">Proven Excellence</h1>
+                    <p>Explore a showcase of remarkable events where precision, safety, and professionalism come alive. Let Crowd Minders secure your next success—get in touch today!</p>
                 </div>
                 <div class="banner-thumbnail" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="400">
                     <img class="paralax-image" src="banner/banner-thumb-1.png" alt="Illustration">
@@ -216,7 +216,7 @@
             <div class="container">
                 <div class="section-heading heading-left">
                     <span class="subtitle">Our Project</span>
-                    <h2 class="title">Explore the amazing projects in our Showcase where quality and creativity collide. Working on one project at a time, we are here to realize your goals!
+                    <h2 class="title">See the events we’ve secured—explore our showcase to witness excellence up close!
                     </h2>
                 </div>
                 <div class="axil-isotope-wrapper">
