--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -519,7 +519,7 @@
                                     <div class="modal-body">
                                         <!-- Project Details Go Here -->
                                         <h2>BAL Basketball Championship</h2>
-                                        <p class="item-intro text-muted">Basketball Africa League (BAL)</p>
+                                        <p class="item-intro text-muted">Fédération Internationale de Football Association (FIFA)</p>
                                         <img class="img-responsive" src="images/Crowd-minders-Pictures/Fifa/fifaopen.jpg" alt="">
                                         <!-- <p>The Victory Schools website is designed to be an informative and engaging platform for students, parents, and staff, providing easy access to essential information and resources.</p> -->
                                         <ul class="list-inline">
