--- a/contact.html
+++ b/contact.html
@@ -193,7 +193,7 @@
                 <div class="row">
                     <div class="col-xl-5 col-lg-6">
                         <div class="contact-form-box shadow-box mb--30">
-                         <h3 class="title">Get a free IzubaGen Quote now</h3>
+                         <h3 class="title">Get a free Crowd Minders Quote now</h3>
                             <form action="https://formspree.io/f/myzgzepo"  method="POST" class="axil-contact-form" id="my-form">
                                 <div class="form-group">
                                     <label>Name</label>
@@ -231,7 +231,7 @@
                         <div class="contact-info mb--30">
                             <h4 class="title">Email</h4>
                             <p>Our support team will get back to within 24h during standard business hours.</p>
-                            <h4 class="phone-number" style="font-size : 28px;"><a href="mailto:izubagen@gmail.com">info@izubagen.rw</a></h4>
+                            <h4 class="phone-number" style="font-size : 28px;"><a href="mailto:Crowd Minders@gmail.com">info@Crowd Minders.rw</a></h4>
                         </div> 
                         <div>  </div>
                     </div>
@@ -262,10 +262,10 @@
                 <div class="footer-top">
                     <div class="footer-social-link">
                       <ul class="list-unstyled">
-                            <li><a href="https://rw.linkedin.com/company/izubagen?trk=public_post_feed-actor-name" data-sal="slide-up" data-sal-duration="500" data-sal-delay="400"><i class="fab fa-linkedin-in"></i></a></li>
-                           <li><a href="https://facebook.com/izubagen" data-sal="slide-up" data-sal-duration="500" data-sal-delay="100"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="https://www.instagram.com/izubagen" data-sal="slide-up" data-sal-duration="500" data-sal-delay="500"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="https://twitter.com/izubagen" data-sal="slide-up" data-sal-duration="500" data-sal-delay="200"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://rw.linkedin.com/company/Crowd Minders?trk=public_post_feed-actor-name" data-sal="slide-up" data-sal-duration="500" data-sal-delay="400"><i class="fab fa-linkedin-in"></i></a></li>
+                           <li><a href="https://facebook.com/Crowd Minders" data-sal="slide-up" data-sal-duration="500" data-sal-delay="100"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="https://www.instagram.com/Crowd Minders" data-sal="slide-up" data-sal-duration="500" data-sal-delay="500"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://twitter.com/Crowd Minders" data-sal="slide-up" data-sal-duration="500" data-sal-delay="200"><i class="fab fa-twitter"></i></a></li>
                             <li><a href="javascript:void(0)" data-sal="slide-up" data-sal-duration="500" data-sal-delay="300"><i class="fab fa-pinterest-p"></i></a></li>
                         </ul>
                     </div>
@@ -335,7 +335,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="footer-copyright">
-                                <span class="copyright-text">© 2024. All rights reserved by <a href='index.html'>IzubaGen</a>.</span>
+                                <span class="copyright-text">© 2024. All rights reserved by <a href='index.html'>Crowd Minders</a>.</span>
                             </div>
                         </div>
                         <div class="col-md-6">
