working on blog

--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -1774,9 +1774,9 @@
                 <div class="footer-top">
                     <div class="footer-social-link">
                         <ul class="list-unstyled">
-                            <li><a href="https://rw.linkedin.com/company/izubagen?trk=public_post_feed-actor-name" data-sal="slide-up" data-sal-duration="500" data-sal-delay="400"><i class="fab fa-linkedin-in"></i></a></li>
-                           <li><a href="https://facebook.com/izubagen/" data-sal="slide-up" data-sal-duration="500" data-sal-delay="100"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="https://www.instagram.com/izubagen/" data-sal="slide-up" data-sal-duration="500" data-sal-delay="500"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://rw.linkedin.com/company/Crowd Minders ?trk=public_post_feed-actor-name" data-sal="slide-up" data-sal-duration="500" data-sal-delay="400"><i class="fab fa-linkedin-in"></i></a></li>
+                           <li><a href="https://facebook.com/Crowd Minders /" data-sal="slide-up" data-sal-duration="500" data-sal-delay="100"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="https://www.instagram.com/Crowd Minders /" data-sal="slide-up" data-sal-duration="500" data-sal-delay="500"><i class="fab fa-instagram"></i></a></li>
                             <li><a href="javascript:void(0)" data-sal="slide-up" data-sal-duration="500" data-sal-delay="200"><i class="fab fa-twitter"></i></a></li>
                             <li><a href="javascript:void(0)" data-sal="slide-up" data-sal-duration="500" data-sal-delay="300"><i class="fab fa-pinterest-p"></i></a></li>
                         </ul>
@@ -1847,7 +1847,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="footer-copyright">
-                                <span class="copyright-text">© 2024. All rights reserved by <a href='index.htm'>IzubaGen</a>.</span>
+                                <span class="copyright-text">© 2024. All rights reserved by <a href='index.htm'>Crowd Minders </a>.</span>
                             </div>
                         </div>
                         <div class="col-md-6">
