updating the contact

--- a/contact.html
+++ b/contact.html
@@ -112,9 +112,9 @@
                                     <li class="menu-item-has-children">
                                         <a href="javascript:void(0);">Pages</a>
                                         <ul class="axil-submenu">
-                                            <li><a href='about-us.html'>About Us</a></li>
+                                            <li><a href='javascript:void(0)'>About Us</a></li>
                                             
-                                            <li><a href='pricing-table.html'>Pricing Table</a></li>
+                                            <li><a href='javascript:void(0)'>Pricing Table</a></li>
 
                                         </ul>
                                     </li>
@@ -193,7 +193,7 @@
                 <div class="row">
                     <div class="col-xl-5 col-lg-6">
                         <div class="contact-form-box shadow-box mb--30">
-                         <h3 class="title">Get a free Crowd Minders Quote now</h3>
+                         <b class="title">Ready to Stay Safe?—Request a Free Crowd-Minders Consultation! </b>
                             <form action="https://formspree.io/f/myzgzepo"  method="POST" class="axil-contact-form" id="my-form">
                                 <div class="form-group">
                                     <label>Name</label>
@@ -213,7 +213,7 @@
                                 </div>
                                 <div class="form-group mb--40">
                                     <label>How can we help you?</label>
-                                    <textarea name="contact-message" id="contact-message" class="form-control textarea" cols="30" rows="4" required=""></textarea>
+                                    <textarea name="contact-message" id="contact-message" class="form-control textarea" cols="30" rows="4" placeholder="Eg:Event Details: (Date, Location, Number of Guests)" required=""></textarea>
                                 </div>
                                 <div class="form-group">
                                     <input type="submit" value="Get Pricing Now" class="axil-btn btn-fill-primary btn-fluid btn-primary" name="submit-btn">
@@ -225,13 +225,14 @@
                     <div class="col-xl-5 col-lg-6 offset-xl-1">
                         <div class="contact-info mb--100 mb_md--30 mt_md--0 mt--150">
                             <h4 class="title">Phone</h4>
-                            <p>Our customer care is open from Monday - Friday<br> 9:00 am to 22:00 pm</p>
-                            <h4 class="phone-number" style="font-size: 25px;"><a href="tel:+250780854895">(+250) 780 854 895</a></h4>
+                            <p>We’re here for you! Call us Monday - Friday,<br> 9:00 AM to 10:00 PM</p>
+                            <h4 class="phone-number" style="font-size: 25px;"><a href="tel:+250788520272">(+250) 788 520 272</a></h4> <br>
+                            <h4 class="phone-number" style="font-size: 25px;"><a href="tel:+250790912194">(+250) 790 912 194</a></h4>
                         </div>
                         <div class="contact-info mb--30">
                             <h4 class="title">Email</h4>
-                            <p>Our support team will get back to within 24h during standard business hours.</p>
-                            <h4 class="phone-number" style="font-size : 28px;"><a href="mailto:Crowd Minders@gmail.com">info@Crowd Minders.rw</a></h4>
+                            <p>Reach out to us anytime! Our support team responds within 24 hours during business hours:</p>
+                            <h4 class="phone-number" style="font-size : 28px;"><a href="mailto:crowdminders@gmail.com">info@CrowdMinders.rw</a></h4>
                         </div> 
                         <div>  </div>
                     </div>
