--- a/index.htm
+++ b/index.htm
@@ -147,9 +147,9 @@ and Social Media services in Kigali, Rwanda. ">
                                     <li class="menu-item-has-children">
                                         <a href="javascript:void(0)">Pages</a>
                                         <ul class="axil-submenu">
-                                            <li><a href='about-us.html'>About Us</a></li>
+                                            <li><a href='javascript:void(0)'>About Us</a></li>
                                             
-                                            <li><a href='pricing-table.html'>Pricing Table</a></li>
+                                            <li><a href='javascript:void(0)'>Pricing Table</a></li>
 
                                         </ul>
                                     </li>
