--- a/pricing-table.html
+++ b/pricing-table.html
@@ -480,9 +480,9 @@
                     <div class="footer-social-link">
                        <ul class="list-unstyled">
                             <li><a href="javascript:void(0)" data-sal="slide-up" data-sal-duration="500" data-sal-delay="400"><i class="fab fa-linkedin-in"></i></a></li>
-                           <li><a href="https://facebook.com/IzubaGen_agency/" data-sal="slide-up" data-sal-duration="500" data-sal-delay="100"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="https://www.instagram.com/IzubaGen_agency/" data-sal="slide-up" data-sal-duration="500" data-sal-delay="500"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="https://twitter.com/IzubaGen_agency/" data-sal="slide-up" data-sal-duration="500" data-sal-delay="200"><i class="fab fa-twitter"></i></a></li>
+                           <li><a href="https://facebook.com/Crowd Minders _agency/" data-sal="slide-up" data-sal-duration="500" data-sal-delay="100"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="https://www.instagram.com/Crowd Minders _agency/" data-sal="slide-up" data-sal-duration="500" data-sal-delay="500"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://twitter.com/Crowd Minders _agency/" data-sal="slide-up" data-sal-duration="500" data-sal-delay="200"><i class="fab fa-twitter"></i></a></li>
                             <li><a href="javascript:void(0)" data-sal="slide-up" data-sal-duration="500" data-sal-delay="300"><i class="fab fa-pinterest-p"></i></a></li>
                         </ul>
                     </div>
@@ -552,7 +552,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="footer-copyright">
-                                <span class="copyright-text">© 2024. All rights reserved by <a href='index.htm'>IzubaGen</a>.</span>
+                                <span class="copyright-text">© 2024. All rights reserved by <a href='index.htm'>Crowd Minders </a>.</span>
                             </div>
                         </div>
                         <div class="col-md-6">
